--- a/Vehicles.html
+++ b/Vehicles.html
@@ -2,7 +2,7 @@
 <html lang="ta">
 <head>
   <meta charset="UTF-8" />
-  <title>Tamil Learning App</title>
+  <title>Tamil Learning App - Vehicles</title>
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=ng4M6EUA"></script>
   <style>
     body {
@@ -48,25 +48,25 @@
   </div>
 
   <script>
-            const vehicles = [
-            { name: "மிதிவண்டி", image: "assets/images/Vehicles/cycle.jpg" },
-            { name: "பைக்", image: "assets/images/Vehicles/bike.jpg" },
-            { name: "கார்", image: "assets/images/Vehicle/car.jpg" },
-            { name: "லாரி", image: "assets/images/Vehicles/lorry.jpg" },
-            { name: "விமானம்", image: "assets/images/Vehicles/aeroplane.jpg" },
-            { name: "ஆட்டோ", image: "assets/images/Vehicles/auto.jpg" },
-            { name: "படகு", image: "assets/images/Vehicles/boat.jpg" },
-            { name: "ஜீப்", image: "assets/images/Vehicles/jeep.jpg" },
-            { name: "வேன்", image: "assets/images/Vehicles/van.jpg" },
-            { name: "பேருந்து", image: "assets/images/Vehicles/bus.jpg" }
-        ];
+    const vehicles = [
+      { name: "மிதிவண்டி", image: "assets/images/Vehicles/cycle.jpg" },
+      { name: "பைக்", image: "assets/images/Vehicles/bike.jpg" },
+      { name: "கார்", image: "assets/images/Vehicle/car.jpg" },
+      { name: "லாரி", image: "assets/images/Vehicles/lorry.jpg" },
+      { name: "விமானம்", image: "assets/images/Vehicles/aeroplane.jpg" },
+      { name: "ஆட்டோ", image: "assets/images/Vehicles/auto.jpg" },
+      { name: "படகு", image: "assets/images/Vehicles/boat.jpg" },
+      { name: "ஜீப்", image: "assets/images/Vehicles/jeep.jpg" },
+      { name: "வேன்", image: "assets/images/Vehicles/van.jpg" },
+      { name: "பேருந்து", image: "assets/images/Vehicles/bus.jpg" }
+    ];
 
-    async function speak(text) {
+    const maxAttempts = 3;
+
+    function speak(text) {
       return new Promise(resolve => {
         if (responsiveVoice.voiceSupport()) {
-          responsiveVoice.speak(text, "Tamil Female", {
-            onend: resolve
-          });
+          responsiveVoice.speak(text, "Tamil Female", { onend: resolve });
         } else {
           alert("ResponsiveVoice not supported on this browser.");
           resolve();
@@ -74,8 +74,58 @@
       });
     }
 
+    function listen() {
+      return new Promise((resolve, reject) => {
+        const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+        recognition.lang = "ta-IN";
+        recognition.interimResults = false;
+        recognition.maxAlternatives = 1;
+
+        const timeout = setTimeout(() => {
+          recognition.abort();
+          reject("timeout");
+        }, 10000);
+
+        recognition.onresult = event => {
+          clearTimeout(timeout);
+          const said = event.results[0][0].transcript.trim();
+          resolve(said);
+        };
+
+        recognition.onerror = () => {
+          clearTimeout(timeout);
+          reject("error");
+        };
+
+        recognition.start();
+      });
+    }
+
     async function delay(ms) {
-      return new Promise(r => setTimeout(r, ms));
+      return new Promise(resolve => setTimeout(resolve, ms));
+    }
+
+    async function validateWord(word) {
+      let attempts = 0;
+      while (attempts < maxAttempts) {
+        await speak(word);
+        try {
+          const userSaid = await listen();
+          console.log("🎤 Heard:", userSaid);
+          if (userSaid === word) {
+            await speak("நன்றாகப் பேசினீர்! அடுத்தது.");
+            return true;
+          } else {
+            attempts++;
+            await speak("தவறு. மீண்டும் முயற்சி செய்யுங்கள்.");
+          }
+        } catch {
+          attempts++;
+          await speak("எதுவும் சொல்லவில்லை. மீண்டும் முயற்சி செய்யுங்கள்.");
+        }
+      }
+      await speak("அடுத்த வாகனத்திற்கு செல்லலாம்.");
+      return false;
     }
 
     async function startApp() {
@@ -88,8 +138,8 @@
       for (const vehicle of vehicles) {
         document.getElementById("VehicleImage").src = vehicle.image;
         document.getElementById("VehicleName").innerText = vehicle.name;
-        await speak(vehicle.name);
-        await delay(10000); // Wait for 10 seconds per animal
+        await validateWord(vehicle.name);
+        await delay(1000);
       }
 
       await speak("நன்றி! தமிழில் வாகனங்கள் நீங்கள் கற்றுக்கொண்டீர்கள்!");
