--- a/Numbers.html
+++ b/Numbers.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <div class="container" id="app">
-    <img src="assets/images/dashboard/numbers.jpg" alt="Welcome" />
+    <img src="assets/images/FirstPage/NumberFirstPage.jpeg" alt="Welcome" />
     <h1>வணக்கம்</h1>
     <button onclick="startApp()">உள்நுழை</button>
   </div>
