--- a/Breakfast.html
+++ b/Breakfast.html
@@ -42,8 +42,8 @@
 </head>
 <body>
   <div class="container" id="app">
-    <img src="assets/images/dashboard/birds.jpg" alt="Welcome" />
-    <h1>மதிய வணக்கம்</h1>
+    <img src="assets/images/breakfast bg.jpg" alt="Welcome" />
+    <h1>வணக்கம்</h1>
     <button onclick="startApp()">உள்நுழை</button>
   </div>
 
