--- a/Dinner.html
+++ b/Dinner.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <div class="container" id="app">
-    <img src="assets/images/dashboard/birds.jpg" alt="Welcome" />
+    <img src="assets/images/dinner bg.jpg" alt="Welcome" />
     <h1>வணக்கம்</h1>
     <button onclick="startApp()">உள்நுழை</button>
   </div>
