--- a/Lunch.html
+++ b/Lunch.html
@@ -49,7 +49,7 @@
 
   <script>
     const lunchs = [
-      { name: "சாதம்", image: "assets/images/dashboard/lunch.jpg" },
+      { name: "சாதம்", image: "assets/images/dashboard/lunch bg.jpg" },
       { name: "சாம்பார்", image: "assets/images/dashboard/சாம்பார்.jpg" },
       { name: "ரசம்", image: "assets/images/dashboard/ரசம்.jpg" },
       { name: "கார குழம்பு", image: "assets/images/dashboard/கார குழம்பு.jpg" },
